# hw-food-bot

./: .env.example  Dockerfile  Dockerignore  README.md  food.ipynb  hello.py  motivation.txt  pyproject.toml
.github/workflows/: deploy.yaml
hw-food-bot/: food_api.py  motivation.py  telegram.py  weather_api.py
src/hw_food_bot/: bot.py  calories_math.py  food_api.py  motivation.py  setup_logging.py  weather_api.py
